--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -1,6 +1,6 @@
 .button {
   padding: 20px 40px;
-  outline: hidden;
+  outline-style: none;
   cursor: pointer;
   border: $border;
   color: $fontColor;
