--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -51,3 +51,21 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes bombAnimation {
+  from {
+    background-position-x: 0;
+  }
+  to {
+    background-position-x: 80px;
+  }
+}
+
+@keyframes bombRotateAnimation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
