--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -15,4 +15,12 @@
     background: $fontColor;
     border-color: #fff;
   }
+
+  &__open-store {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 5px 10px;
+    font-size: 3rem;
+  }
 }
