--- a/sass/_store.scss
+++ b/sass/_store.scss
@@ -1,5 +1,6 @@
 .store {
   overflow-y: scroll;
+  overflow-x: hidden;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -88,5 +89,15 @@
     height: 200px;
     margin-top: 50px;
     font-size: 10rem;
+  }
+
+  &__close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
   }
 }
