Created GameAudio and add for each situation in gama (like explosion, bought allies) matching in this situation

--- a/sass/_store.scss
+++ b/sass/_store.scss
@@ -99,5 +99,15 @@
     height: 50px;
     border-radius: 50%;
     cursor: pointer;
+    border: 2px solid $fontColor;
+    color: $fontColor;
+    background-color: $siteBackground;
+    outline: transparent;
+    transition: 0.3s;
+
+    &:hover {
+      color: $siteBackground;
+      background: $fontColor;
+    }
   }
 }
